docs/content/en/docs/examples/metrics/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: ingress-controller
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      run: prometheus
  template:
    metadata:
      labels:
        run: prometheus
      name: prometheus
      namespace: ingress-controller
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        imagePullPolicy: IfNotPresent
        args:
        - --config.file=/etc/prometheus/config/prometheus.yml
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /etc/prometheus/config
          name: prometheus-cfg
      serviceAccount: prometheus
      volumes:
      - configMap:
          name: prometheus-cfg
        name: prometheus-cfg
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ingress-controller
spec:
  ports:
  - port: 9090
  selector:
    run: prometheus
