docs/content/en/docs/examples/metrics/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/ssl-redirect: "false"
  name: whoami
  namespace: default
spec:
  rules:
  - host: whoami.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 8000
  tls:
  - hosts:
    - whoami.localdomain
    secretName: whoami
